# SmallProjects

./: .gitignore  LICENSE  README.md  fibonacciMASMAssembly.c  noiseImageGenerator.c
Bash/Input/: fal  fil  read_and_print.sh
Bash/Loops/: echo.sh  fibonacci.sh
BigIntegerInC-Slow-/: READ.txt  bigint.c
Cenv/GravityTest/: CMakeLists.txt  main.c
Cenv/utils/: README.md  a.out  main.cpp  test.sh  utils.hpp
Cenv/utils/graphics/: color.cpp  color.hpp  graphics.hpp  image.cpp  image.hpp  plot.cpp  plot.hpp
NASM/: READ.txt
NASM/SpojNASM/: XOR.asm
NASM/SpojNASM/Basic/: Test1.asm  XOR.asm
NASM/Tutorials/: ReadAndEcho.asm
NASM/lib/: Uitoa.asm  atoi.asm  itoa.asm  strlen.asm
SPOJ-C/: SmallFactorials.c
emu8086/: printLong.asm
inlineAssembly/: fibonacciMASMAssembly.c
noiseImageGenerator/: noiseImageGenerator.c
spojNASM/TutorialsNASM/: ReadAndEcho.asm
